--- a/composer.json
+++ b/composer.json
@@ -8,32 +8,31 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.2.5",
+        "php": "^7.3.23",
         "barryvdh/laravel-dompdf": "^0.8.6",
         "fideloper/proxy": "^4.2",
         "firebase/php-jwt": "^5.2",
         "flyingluscas/correios-php": "^2.3",
         "fruitcake/laravel-cors": "^1.0",
         "google/apiclient": "^2.7",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "^7.0.1",
         "intervention/image": "^2.5",
         "jeroennoten/laravel-adminlte": "^3.2",
-        "laravel/framework": "^7.0",
+        "laravel/framework": "^8.10",
+        "laravel/legacy-factories": "^1.1",
         "laravel/tinker": "^2.0",
-        "laravel/ui": "^2.0",
-        "mercadopago/dx-php": "^2.0",
+        "laravel/ui": "^3.0",
         "phpmailer/phpmailer": "^6.1",
         "picqer/php-barcode-generator": "^2.0",
-        "stavarengo/php-sigep": "^0.0.1",
         "stavarengo/php-sigep-fpdf": "dev-master",
         "stichoza/google-translate-php": "^4.1"
     },
     "require-dev": {
-        "facade/ignition": "^2.0",
+        "facade/ignition": "^2.3.6",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
-        "nunomaduro/collision": "^4.1",
-        "phpunit/phpunit": "^8.5"
+        "nunomaduro/collision": "^5.0",
+        "phpunit/phpunit": "^9.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -47,12 +46,10 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
-        },
-        "classmap": [
-            "database/seeds",
-            "database/factories"
-        ]
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
     },
     "autoload-dev": {
         "psr-4": {
