--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
         "laravel/legacy-factories": "^1.1",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.0",
+        "league/oauth2-facebook": "^2.0",
+        "league/oauth2-google": "^4.0",
         "phpmailer/phpmailer": "^6.1"
     },
     "require-dev": {
